# book-manager-cpp

./: .gitignore  CMakeLists.txt  README.md
bookmanager/: CMakeLists.txt  README.md  config.cfg
bookmanager/bookmanager-tests/: 01_dbConnectTest.cpp  02_UserRepositoryTest.cpp  03_TokenRepositoryTest.cpp  04_BookRepositoryTest.cpp  05_BookController.cpp  06_UserController.cpp  07_UserServicesTest.cpp  CMakeLists.txt  main.cpp
bookmanager/css/: site.css
bookmanager/database/: db.schema
bookmanager/js/: book-manager.js  login.js  register.js
bookmanager/src/: Book.cpp  Book.h  BookController.cpp  BookController.h  BookRepository.cpp  BookRepository.h  IndexPage.cpp  IndexPage.h  TokenRepository.cpp  TokenRepository.h  User.cpp  User.h  UserController.cpp  UserController.h  UserRepository.cpp  UserRepository.h  UserServices.cpp  UserServices.h  WebServer.cpp  WebServer.h  main.cpp
common/: CMakeLists.txt  ConfigReader.cpp  ConfigReader.h  JsonResponse.h  Logger.cpp  Logger.h  WebPage.h  dbConnect.cpp  dbConnect.h
